--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
 	"keywords": [],
 	"license": "MIT",
 	"devDependencies": {
+		"@codemirror/state": "^6.5.4",
+		"@codemirror/view": "^6.39.14",
+		"@eslint/json": "^1.0.1",
 		"@types/node": "^16.11.6",
+		"@typescript-eslint/parser": "^8.56.0",
 		"builtin-modules": "^3.3.0",
 		"esbuild": "0.17.3",
+		"eslint": "^10.0.0",
+		"eslint-plugin-obsidianmd": "^0.1.9",
+		"globals": "^17.3.0",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "4.7.4",
+		"typescript-eslint": "^8.56.0"
 	}
 }
